--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "gulp-protractor-cucumber-html-report",
+  "name": "protractor-cucumber-report-gulp",
   "description": "Generate html report from JSON file returned by cucumber-js json formatter",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/mrooding/gulp-protractor-cucumber-html-report",
-  "author": {
-    "name": "Rooding, Marc",
-    "email": "mrooding@xebia.com"
-  },
+  "author": "Rooding, Marc <mrooding@xebia.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/mrooding/gulp-protractor-cucumber-html-report.git"
@@ -49,5 +46,9 @@
   },
   "keywords": [
     "gulpplugin"
-  ]
+  ],
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  }
 }
